# eclss-nostd

./: .gitignore  Cargo.toml  flake.nix
.devcontainer/: devcontainer.json
.direnv/: flake-profile-1-link  flake-profile-2-link
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: main.rs  scd30.rs
