[package]
name = "eclss_nostd"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.4.0"
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
esp-backtrace = { version = "0.4.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println = { version = "0.3.1", features = ["esp32c3"] }
sensor-scd30 = { version = "0.4.0", default-features = false }
riscv-rt = { version = "0.10", optional = true }
shared-bus = "0.2.0"

[features]
default = ["rt"]
rt = ["riscv-rt"]
